--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <button id="Recipes" class="btn">Saved Recipes</button>
         <div id="nav">
             <div class="left">
-                <a onclick="getHome()" href="#"><h4 >Back to Home</h4></a>
+                <a onclick="getHome()" href="#"><h4 >Home</h4></a>
             </div>
             <div class="right">
                 <a onclick="getRecipes()" href="#"><h4 >My Recipe Book</h4></a>
