added ingredients button and call for said button

--- a/index.html
+++ b/index.html
@@ -28,6 +28,26 @@
     <script>
         let recipeSearch;
 
+
+    function searchIngredients(recipeid){
+        var settings = {
+            "async": true,
+            "crossDomain": true,
+            "url": "https://spoonacular-recipe-food-nutrition-v1.p.rapidapi.com/recipes/"+ recipeid +"/information",
+            "method": "GET",
+            "headers": {
+                "x-rapidapi-host": "spoonacular-recipe-food-nutrition-v1.p.rapidapi.com",
+                "x-rapidapi-key": "9493df4a93msh1173120d859372ap12bb8ajsnff91615f339b"
+            }
+        }
+
+        $.ajax(settings).done(function (response) {
+            console.log(response);
+        });
+    }
+
+
+
     function searchForRecipe(){
         console.log(recipeSearch)
         var settings = {
@@ -39,7 +59,7 @@
                 "x-rapidapi-host": "spoonacular-recipe-food-nutrition-v1.p.rapidapi.com",
                 "x-rapidapi-key": "9493df4a93msh1173120d859372ap12bb8ajsnff91615f339b"
             }
-        }
+        };
 
         $.ajax(settings).done(function (response) {
             console.log(response);
@@ -52,6 +72,7 @@
                 recipeCard.append(title);
                 recipeCard.append(readyMin);
                 recipeCard.append(servings);
+                recipeCard.append($("<button>").attr("class", "ingredientsBtn").attr("data-recipeid", response.results[i].id).text("Show Ingredients"));
                 recipeCard.append($("<hr>"));
                 $("#recipeDiv").append(recipeCard);
             };
@@ -62,6 +83,11 @@
         event.preventDefault();
         recipeSearch = $("#recipeSearch").val();
         searchForRecipe();
+    });
+
+    $("#recipeDiv").on("click", ".ingredientsBtn", function(event){
+        event.preventDefault();
+        searchIngredients($(this).attr("data-recipeid"));
     });
 
 
