--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
         <h1>Allergy Specific, Food and Drink Recipes</h1>
         <h3>Put down the EpiPen and pick up the recipe</h3>
         <div>
-        <button id="Food" class="btn">Food</button>
-        <button id="Drinks" class="btn">Drinks/Cocktails</button>
-        <button id="Recipes" class="btn">Saved Recipes</button>
+        <button id="Food" class="btn"><a href ="food.html">Food</a></button>
+        <button id="Drinks" class="btn"><a href ="drinks.html">Drinks/Cocktails</a></button>
+        <button id="Recipes" class="btn"><a href="recipes.html">Saved Recipes</a></button>
         
     </div>  
 </body>
