--- a/food.html
+++ b/food.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src = "script.js" type="text/javascript"></script>
+
     <title>Food</title>
     <h1>Food</h1>
 </head>
 <body>
-    
+    <input type="text"> 
 </body>
 </html>
