--- a/index.html
+++ b/index.html
@@ -28,10 +28,21 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="./assets/js/script.js"></script>
-    
+        
+        <div>
         <h1>Allergy Specific, Food and Drink Recipes</h1>
         <h3>Put down the EpiPen and pick up the recipe</h3>
-        <div>
+        </div>
+
+        <div class="container">
+            <div class="split left">
+                <h2>Drinks/Cocktails</h2>
+                <a href="#" class="button">Click Here</a>
+            </div>
+            <div class="split right">
+                <h2>Food</h2>
+                <a href="#" class="button">Click Here</a>
+            </div>
     </div>  
 </body>
 </html>
