--- a/drinks.html
+++ b/drinks.html
@@ -15,6 +15,11 @@
       <button id="byName">Search by Name</button>
       <button id="byIngredient"> Search by Ingredient </button>
     </div>
+    <div id="results">
+        <!-- append results here -->
+    </div>
   </body>
- 
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src = "./drinks.js" type="text/javascript"></script>
+
 </html>
