--- a/food.html
+++ b/food.html
@@ -48,11 +48,51 @@
                 <label for="recipeSearch">Search for recipe:</label>
                 <input type="text" class="form-control" id="recipeSearch" placeholder="Steak, burger, pizza">
             </div>
-            <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="exampleCheck1">
-                <label class="form-check-label" for="exampleCheck1">Check me out</label>
+            <div>
+                <h5>Allergies:</h5>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="dairy" value="diary">
+                    <label class="form-check-label" for="inlineCheckbox1">Dairy</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="egg" value="egg">
+                    <label class="form-check-label" for="egg">Egg</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="gluten" value="gluten">
+                    <label class="form-check-label" for="gluten">Gluten</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="sesame" value="sesame">
+                    <label class="form-check-label" for="sesame">Sesame</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="seafood" value="seafood">
+                    <label class="form-check-label" for="seafood">Seafood</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="shellfish" value="shellfish">
+                    <label class="form-check-label" for="shellfish">Shellfish</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="soy" value="soy">
+                    <label class="form-check-label" for="soy">Soy</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="sulfite" value="sulfite">
+                    <label class="form-check-label" for="sulfite">Sulfite</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="treeNut" value="tree%20nut">
+                    <label class="form-check-label" for="treeNut">Tree Nut</label>
+                </div>
+                <div class="form-check form-check-inline">
+                    <input class="form-check-input" type="checkbox" id="wheat" value="wheat">
+                    <label class="form-check-label" for="wheat">Wheat</label>
+                </div>
             </div>
-            <button type="submit" class="btn btn-primary" id="submitBtn">Search</button>
+            
+            <button type="submit" class="btn btn-primary btn-block" id="submitBtn">Search</button>
         </form>
 
         <div id="recipeCardDiv"></div>
