fixed incorrect data being pulled
fixed data being pulled and input wrong on the cards. added error checking

--- a/recipes.html
+++ b/recipes.html
@@ -65,10 +65,11 @@
 
     <div class="container split-container">
         <div class="float-left recipe-div">
-            <div id="foodRecipeDiv">
+            <div>
                 <h4>Food Recipes</h4>
                 <hr/>
             </div>
+            <div id="foodRecipeDiv"></div>
         </div>
         <div class="float-right recipe-div">
             <div id="drinkRecipeDiv">
