--- a/drinks.html
+++ b/drinks.html
@@ -32,14 +32,16 @@
           <a class="nav-item nav-link" href="./recipes.html">Recipe Book</a>
         </div>
       </div>
-      <div class="container">
-        <input type="checkbox" id="byName">Search by Name
-        <input type="checkbox"id="byIngredient">Search by Ingredient
+    </nav>
+    <div class="container">
         <input type="text" id="whatDrink" />
         <button id="submitBtn">drink up!</button>
+        <br>
+        <button id="byName" class="btn btn-lrg">Search by Name</button>
+        <br>
+        <button id="byIngredient" class="btn btn-lrg">Search by Ingredient</button>
       </div>
-    </nav>
-
+    </body>
     <script
       src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
       integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -56,5 +58,4 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/drinks.js"></script>
-  </body>
 </html>
