--- a/drinks.html
+++ b/drinks.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Drink Recipe Search</title>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -34,12 +34,22 @@
       </div>
     </nav>
     <div class="container">
-        <input type="text" id="whatDrink" />
-        <button id="submitBtn">drink up!</button>
-        <br>
-        <button id="byName" class="btn btn-lrg">Search by Name</button>
-        <br>
-        <button id="byIngredient" class="btn btn-lrg">Search by Ingredient</button>
+        <div class="row">
+            <div class="col-md-2"></div>
+            <div class="col-md-8">
+                <input type="text" id="whatDrink">
+                <button id="submitBtn">drink up!</button>
+                <br>
+                <button id="byName" class="btn btn-lrg">Search by Name</button>
+                <br>
+                <button id="byIngredient" class="btn btn-lrg">Search by Ingredient</button>
+            </div>
+            <div class="col-md-2"></div>
+            <div class="row">
+                <div id="results"></div>
+            </div>
+
+        </div>
       </div>
     </body>
     <script
@@ -58,4 +68,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="./assets/js/drinks.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
 </html>
