--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     </a>
     <!-- Footer using foudation -->
     <footer class="clearfix">
-        <p class="float-left">For more info on allergies visit <a href="https://www.mayoclinic.org/diseases-conditions/food-allergy/symptoms-causes/syc-20355095#:~:text=Food%20allergy%20is%20an%20immune,problems%2C%20hives%20or%20swollen%20airways.">Mayo Clinic</a></p>
+        <p class="float-left">For more info on allergies visit <a href="https://www.mayoclinic.org/diseases-conditions/food-allergy/symptoms-causes/syc-20355095#:~:text=Food%20allergy%20is%20an%20immune,problems%2C%20hives%20or%20swollen%20airways." target="_blank">Mayo Clinic</a></p>
         <p class="float-right">Coded with love <i class="fas fa-heart"></i></p>
     </footer>
 
