--- a/drinks.html
+++ b/drinks.html
@@ -50,7 +50,7 @@
         <div class="row">
           <div id="results"></div>
         </div>
-        <div class="modal fade" id="ingredientModal" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal fade" id="ingredientModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
