--- a/food.html
+++ b/food.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
 <body>
+
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="./index.html">Home</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
@@ -42,9 +43,11 @@
     <div class="container">
         <form>
             <div class="form-group">
+                    <div class="center"> 
                 <label for="recipeSearch">Search for recipe:</label>
                 <input type="text" class="form-control" id="recipeSearch" placeholder="Steak, burger, pizza">
-            </div>
+                </div>
+            </div> 
             <div>
                 <h5>Allergies:</h5>
                 <div class="form-check form-check-inline">
@@ -106,5 +109,14 @@
         crossorigin="anonymous"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./assets/js/food.js"></script>
+
+    <style>
+    body {
+    background-image: url('.//assets/images/recipeleftimg.jpg');
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+        background-size: cover;
+      }
+    </style>
 </body>
 </html>
