--- a/food.html
+++ b/food.html
@@ -39,7 +39,7 @@
             </div>
         </div>
     </div>
-
+    <p style="color: white"></p>
     <div class="container">
         <form>
             <div class="form-group">
@@ -112,11 +112,20 @@
 
     <style>
     body {
-    background-image: url('.//assets/images/recipeleftimg.jpg');
+    background-image: url('.//assets/images/recipeleftimg.jpg'); opacity: 1.5;
         background-repeat: no-repeat;
         background-attachment: fixed; 
         background-size: cover;
       }
     </style>
+    <footer>
+        <button onclick="myFunction()">alert</button>
+
+        <script>
+            function myFunction() {
+                alert("Hello! I am an alert box!");
+            }
+        </script>
+    </footer>
 </body>
 </html>
