--- a/drinks.html
+++ b/drinks.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drink Recipe Search</title>
+    <link rel="stylesheet" href="./assets/css/style.css"/>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
@@ -38,7 +39,7 @@
             <div class="col-md-2"></div>
             <div class="col-md-8">
                 <input type="text" id="whatDrink">
-                <button id="submitBtn">drink up!</button>
+                <button id="submitBtn">Drink Up!</button>
                 <br>
                 <button id="byName" class="btn btn-lrg">Search by Name</button>
                 <br>
@@ -69,5 +70,16 @@
     ></script>
     <script src="./assets/js/drinks.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+    <style>
+      body {
+      background-image: url('.//assets/images/drinkrightimg.jpg'); opacity: 1.5;
+          background-repeat: no-repeat;
+          background-attachment: fixed; 
+          background-size: cover;
+        }
+      </style>
+     
+  </body>
 
 </html>
