--- a/food.html
+++ b/food.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Recipe Search</title>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous" />
 </head>
+
 <body>
 
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -43,11 +46,11 @@
     <div class="container">
         <form>
             <div class="form-group">
-                    <div class="center"> 
-                <label for="recipeSearch">Search for recipe:</label>
-                <input type="text" class="form-control" id="recipeSearch" placeholder="Steak, burger, pizza">
+                <div class="center">
+                    <label for="recipeSearch">Search for recipe:</label>
+                    <input type="text" class="form-control" id="recipeSearch" placeholder="Steak, burger, pizza">
                 </div>
-            </div> 
+            </div>
             <div>
                 <h5>Allergies:</h5>
                 <div class="form-check form-check-inline">
@@ -91,7 +94,7 @@
                     <label class="form-check-label" for="wheat">Wheat</label>
                 </div>
             </div>
-            
+
             <button type="submit" class="btn btn-primary btn-block" id="submitBtn">Search</button>
         </form>
 
@@ -111,13 +114,34 @@
     <script src="./assets/js/food.js"></script>
 
     <style>
-    body {
-    background-image: url('.//assets/images/recipeleftimg.jpg'); opacity: 1.5;
-        background-repeat: no-repeat;
-        background-attachment: fixed; 
-        background-size: cover;
-      }
+        body {
+            background-image: url('.//assets/images/recipeleftimg.jpg');
+            opacity: 1.5;
+            background-repeat: no-repeat;
+            background-attachment: fixed;
+            background-size: 100%;
+        }
+
+        #recipeSearch {
+            display: table;
+            height: 100%;
+            width: 100%;
+        }
+
+        #hcontainer {
+            display: table-cell;
+            vertical-align: middle;
+            text-align: center;
+        }
+
+        #content {
+            display: inline-block;
+            border: lightGray 1px solid;
+            background-color: lightBlue;
+            text-align: left;
+        }
     </style>
-   
+
 </body>
+
 </html>
