--- a/food.html
+++ b/food.html
@@ -25,6 +25,9 @@
         </div>
     </nav>
 
+    <div id="allergies"><div id="hcontainer">
+        <div id="content">
+
     <div class="modal fade" id="recipeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -51,7 +54,7 @@
                     <input type="text" class="form-control" id="recipeSearch" placeholder="Steak, burger, pizza">
                 </div>
             </div>
-            <div>
+            <div id="allergies">
                 <h5>Allergies:</h5>
                 <div class="form-check form-check-inline">
                     <input class="form-check-input" type="checkbox" id="dairy" value="diary">
@@ -122,22 +125,24 @@
             background-size: 100%;
         }
 
-        #recipeSearch {
-            display: table;
-            height: 100%;
-            width: 100%;
-        }
-
-        #hcontainer {
-            display: table-cell;
-            vertical-align: middle;
+        #allergies {
+            position: absolute;
+            width: 500px;
+            height: 500px;
+            top: 60;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            margin: auto;
             text-align: center;
+            border: white;
+            text-emphasis-color: white;
         }
 
         #content {
             display: inline-block;
             border: lightGray 1px solid;
-            background-color: lightBlue;
+            background-color:brown);
             text-align: left;
         }
     </style>
