--- a/food.html
+++ b/food.html
@@ -141,9 +141,9 @@
 
         #content {
             display: inline-block;
-            border: lightGray 1px solid;
+            border: white 2px solid;
             background-color:brown);
-            text-align: left;
+            text-align: center;
         }
     </style>
 
