food.html and asset img
stretch picture and add new image for the landing page

--- a/food.html
+++ b/food.html
@@ -25,9 +25,6 @@
         </div>
     </nav>
 
-    <div id="allergies"><div id="hcontainer">
-        <div id="content">
-
     <div class="modal fade" id="recipeModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -45,7 +42,7 @@
             </div>
         </div>
     </div>
-    <p style="color: white"></p>
+  
     <div class="container">
         <form>
             <div class="form-group">
@@ -118,33 +115,21 @@
 
     <style>
         body {
-            background-image: url('.//assets/images/recipeleftimg.jpg');
+            background-image: url('.//assets/images/recipeleftimg2.jpg');
             opacity: 1.5;
             background-repeat: no-repeat;
             background-attachment: fixed;
             background-size: 100%;
+            color: rgb(15, 11, 11);
         }
 
-        #allergies {
-            position: absolute;
-            width: 500px;
-            height: 500px;
-            top: 60;
-            bottom: 0;
-            left: 0;
-            right: 0;
-            margin: auto;
-            text-align: center;
-            border: white;
-            text-emphasis-color: white;
+        .container {
+           background-color: white;
+           margin: 10% auto;
+           padding: 20px;
         }
 
-        #content {
-            display: inline-block;
-            border: white 2px solid;
-            background-color:brown);
-            text-align: center;
-        }
+    
     </style>
 
 </body>
