added different class to style specific page container
added foodPage class to style the specific food.html container

--- a/food.html
+++ b/food.html
@@ -43,7 +43,7 @@
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container foodPage">
         <form>
             <div class="form-group">
                 <div class="center">
