--- a/drinks.html
+++ b/drinks.html
@@ -10,7 +10,7 @@
   </head>
   <body id="drinkSearchPage">
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <a class="navbar-brand" href="./index.html">Drink Search</a>
+      <a class="navbar-brand" href="./index.html">Home</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -24,12 +24,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-item nav-link" href="./food.html">Recipe</a>
+          <a class="nav-item nav-link" href="./food.html">Recipe Search</a>
           <a class="nav-item nav-link" href="./recipes.html">Recipe Book</a>
         </div>
       </div>
     </nav>
-    <div class="container">
+    <div class="container drink-page-content">
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
