Drink Ingredients modal to pop-up, changed buttons

--- a/drinks.html
+++ b/drinks.html
@@ -37,14 +37,16 @@
       <div class="row">
         <div class="col-md-2"></div>
         <div class="col-md-8">
-          <input type="text" id="whatDrink" />
-          <button id="submitBtn">drink up!</button>
-          <br />
-          <button id="byName" class="btn btn-lrg">Search by Name</button>
-          <br />
-          <button id="byIngredient" class="btn btn-lrg">
-            Search by Ingredient
-          </button>
+          
+          <button id="byName" class="btn btn-primary btn-small">Search by Name</button>
+          <button id="byIngredient" class="btn btn-primary btn-small">Search by Ingredient</button>
+          <br/>
+          <p>
+          <input type="text" class="form-control" id="whatDrink" placeholder="Rum, Blueberry, Mojito"/>
+          <button id="submitBtn" class=" btn btn-primary btn-block">drink up!</button>
+          </p>
+      
+  
         </div>
         <div class="col-md-2"></div>
         <div class="row">
