--- a/recipes.html
+++ b/recipes.html
@@ -60,12 +60,12 @@
         <div class="modal-dialog" role="document">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle"></h5>
+                    <h5 class="modal-title drinkTitle" id="modalTitle"></h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
                 </div>
-                <div class="modal-body" id="modalBody"></div>
+                <div class="modal-body drinkBody" id="modalBody"></div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
                 </div>
@@ -88,9 +88,11 @@
                 <div id="foodRecipeDiv"></div>
             </div>
             <div class="float-right recipe-div">
-                <div id="drinkRecipeDiv">
+                <div>
                     <h4>Drinks/Cocktail Recipes</h4>
                     <hr/>
+                </div>
+                    <div id="drinkRecipeDiv"></div>
                 </div>
             </div>
         </div>    
