--- a/drinks.html
+++ b/drinks.html
@@ -39,7 +39,7 @@
         <div class="col-md-8">
           
           <button id="byName" class="btn btn-primary btn-small">Search by Name</button>
-          <button id="supriseMe" class="btn btn-primary btn-small">Suprise me!</button>
+          <button id="supriseMe" class="btn btn-primary btn-small">Surprise me!</button>
           <br/>
           <p>
           <input type="text" class="form-control" id="whatDrink" placeholder="Rum, Blueberry, Mojito"/>
