--- a/drinks.html
+++ b/drinks.html
@@ -38,6 +38,7 @@
           <input type="text" class="form-control" id="whatDrink" placeholder="Rum, Blueberry, Mojito" />
           <button id="submitBtn" class=" btn btn-primary btn-block">drink up!</button>
         </p>
+        <div id="results"></div>
       </div>
       <div class="col-md-2"></div>
 
